css/main.css
body {
  background-color: #64bb4a;
  text-align: center;
  color: #444;
}

.color-wrapper {
  background-color: #fff;
}

p {
  font-size: 1.2em;
  font-family: 'Rubik', sans-serif;
  font-weight: 300;
  line-height: 1.7em;
}

.header h1 {
  padding-top: .88em;
  font-size: 5em;
  font-family: 'Libre Franklin', sans-serif;
  font-weight: 500;
  letter-spacing: .027em;
}

.header p {
    margin-top: 0;
    letter-spacing: .011em;
    max-width: 100%;
}

.header img {
  max-width: 70%;
  padding: 5em 0;
  margin: auto;
  display: block;
}

.header {
  margin-top: .4em;
}

h2 {
  font-size: 2.8em;
  font-family: 'Libre Franklin', sans-serif;
  font-weight: 500;
  margin-bottom: .5em;
}

.carousel-inner {
  border-bottom: .2em solid #555;
  border-top: .2em solid #555;
}

.focus img {
  max-height: 20em;
  margin: 4em 0;
}

.focus h2 {
  margin-top: 2em;
}

.focus p, .get p {
  display: block;
  max-width: 52%;
  margin:auto auto;
}

hr {
  width: 16em;
  margin: 6em auto;
  border: 1px solid #64bb4a;
}

.why, .with-you {
  text-align: left;
}

.why img {
  max-height: 444px;
}

.zebra {
  background: #64bb4a;
  color: #fff;
  margin: 8em 0;
}

.zebra h2 {
  max-width: 82%;
  text-align: center;
  display: inline-block;
  font-size: 2em;
  margin: 1.3em 0;
  line-height: 1.45em;
  font-weight: 300;
  letter-spacing: .02em;
}

.features img {
  max-height: 350px;
  margin: 0 auto;
  display: block;
}

.features h2 {
  font-size: 2em;
  font-weight: 300;
  margin: 2em 0 .3em 0;
}

.get img {
  max-height: 340px;
  margin: 4em 0;
}

form  {
  display: inline-block;
  margin: 4em auto 2em auto;
}

form input {
  line-height: 2.4em;
  font-size: 1.5em;
  font-family: 'Rubik', sans-serif;
  font-weight: 300;
}

#mce-EMAIL {
  width: 400px;
  padding: 0 .8em;
  border: 1px solid #999;
}

#mc-embedded-subscribe {
  background: #007bff;
  padding: 0 1.1em;
  color: #fff;
  border: solid 1px #007bff;
  cursor: pointer;
}

footer {
  background-color: #64bb4a;
  margin-top: 120px;
  height: 48px;
}

footer p {
  margin: 10px auto;
  display: inline-block;
  color: #fff;
}

